--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
       <div class="content-box">
         <div>Hello World!</div>
         <div>Eye plugin is on!</div>
+        <div style="margin-top: 12px;">
+          <input id="company" type="text"/>
+          <button id="add-button">+</button>
+        </div>
+        <div id = "company-ignore-list">
+        </div>
       </div>
     </div>
   </body>
+  <script src="scripts/settings.js"></script>
 </html>
