--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   <body>
     <div class="main-box">
       <div class="content-box">
-        <div>Hello World!</div>
-        <div>Eye plugin is on!</div>
-        <div style="margin-top: 12px;">
-          <input id="company" type="text"/>
-          <button id="add-button">+</button>
+        <div>Ignore company in search:</div>
+        <div class = "input-line">
+          <input class = "company-input" id="company" type="text"/>
+          <button class = "company-add" id="add-button">+</button>
         </div>
         <div id = "company-ignore-list">
         </div>
