Fully hide ignored offers

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
           <input class = "company-input" id="company" type="text"/>
           <button class = "company-add" id="add-button">+</button>
         </div>
+        <div class="full-hide-line">
+          <input class = "full-hide-checkbox" id="full-hide" type="checkbox"/>
+          Fully hide offers
+        </div>
         <div id = "company-ignore-list">
         </div>
       </div>
