--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@
       </div>
     </div>
   </body>
-  <script src="scripts/settings.js"></script>
+  <script src="scripts/settings/settings.js"></script>
 </html>
