Hide offers without given company name

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
           <input class = "full-hide-checkbox" id="full-hide" type="checkbox"/>
           Fully hide offers
         </div>
+        <div class="hide-no-companies-line">
+          <input class = "hide-no-companies-checkbox" id="hide-no-companies" type="checkbox"/>
+          Hide offers without company
+        </div>
         <div id = "company-ignore-list">
         </div>
       </div>
