Add scroll to list of companies

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <input class = "hide-no-companies-checkbox" id="hide-no-companies" type="checkbox"/>
           Hide offers without company
         </div>
-        <div id = "company-ignore-list">
+        <div class="company-list" id = "company-ignore-list">
         </div>
       </div>
     </div>
