--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Julee&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/company-input.css">
+    <link rel="stylesheet" href="styles/filters.css">
+    <link rel="stylesheet" href="styles/company.css">
   </head>
   <body>
     <div class="main-box">
