Split code to distinct files

--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@
       </div>
     </div>
   </body>
-  <script src="scripts/settings/settings.js"></script>
+  <script type="module" src="scripts/settings/settings.js"></script>
 </html>
